
  [ Joey Hess ]
  * Removed nic-extra-modules, isa-pnp-modules, usb-modules from the netwinder
    netboot image since none should be useful on a netwinder and the netwinder
    has a hard 4 mb limit to the initrd size. Closes: #343674
  * Switch all i386 2.6 images to initramfs.

  [ Sven Luther ]
  * Updated powerpc config to 2.6.14-2 kernels.

 -- Christian Perrier <bubulle@debian.org>  Sun, 18 Dec 2005 09:44:04 +0100

debian-installer (20051031) unstable; urgency=low

  [ Stephen R. Marenka ]
  * Added amiboot dependency for m68k.

  [ Kurt Roeckx ]
  * Stop building the monolithic target on amd64.

  [ Colin Watson ]
  * Only generate /etc/lsb-release if a udeb hasn't already provided it.
  * Move "main/debian-installer" (for sources.list.udeb) to a
    UDEB_COMPONENTS variable in build/config/common, so that people can more
    easily build with e.g. non-free udebs.
  * Include module-init-tools-udeb when using udev; busybox modprobe doesn't
    seem to support enough of newer kernel features like aliases and
    blacklisting to be usable there yet.
  * Use [2.6] for udev pkg-lists instead of kernel_specific.

  [ Joey Hess ]
  * Switch to root=/dev/ram in syslinux configs to support 2.6.14 post-devfs
    kernels.
  * Did away with the kernel_specific pkg-lists directories.
  * Back to managing localudebs with apt. To support secure apt,
    authentication is disabled and a warning printed if there are any udebs
    in the localudebs directory. During an official build there will not be
    any and the downloaded udebs will be properly authenticated.
  * pkg-list: Turn off debugging as the dep resolutuon stuff is working ok
    now.

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Nov 2005 15:04:47 -0500

debian-installer (20051026) unstable; urgency=low

  [ Joey Hess ]
  * Add cramfsprogs dependency for mipsel. Closes: #334780
  * Syslinux ignores failures due to being out of disk space (#335152).